Revert "[Tests] 13%"
This reverts commit 4bf1c72f7eb3a36542ba5855820125be9bd54ce7.